# vmsystemtray

./: .gitignore  CMakeLists.txt  configure.ac  fdtray.c  fdtray.h  global.c  global.h  icon.c  icon.h  qt5_tray.c  qt5_tray.cpp  qt5_tray.h  standalone_tray.c  standalone_tray.h  warn.c  warn.h  wmsystemtray.1  wmsystemtray.c  wmsystemtray.h
